# Robotics1_PERSONAL

./: README.md
JJCAR-Rescuebot/: README.md  spot launch codes
JJCAR-Rescuebot/rescue_bot/: CMakeLists.txt  package.xml
JJCAR-Rescuebot/rescue_bot/launch/: ekf.launch  explore_world.launch  goal.launch  rescue_gazebo.launch  slam.launch  slam_explore.launch  slam_explore_map.launch
JJCAR-Rescuebot/rescue_bot/launch/gazebo_worlds/: Jai_World.launch  office_small.launch  office_wide.launch  test_gazebo_1.launch  test_gazebo_2.launch  turtle_bot_gazebo_2.launch
JJCAR-Rescuebot/rescue_bot/launch/navigation/: move_base.launch
JJCAR-Rescuebot/rescue_bot/launch/slam/: gmapping.launch  hector.launch
JJCAR-Rescuebot/rescue_bot/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
JJCAR-Rescuebot/rescue_bot/params/: ekf_multisense.yaml
JJCAR-Rescuebot/rescue_bot/rviz/: rviz_config.rviz
JJCAR-Rescuebot/rescue_bot/src/: dog_controller.cpp  dog_controller.h  main.cpp  rescue_bot.cpp  rescue_bot.h
JJCAR-Rescuebot/rescue_bot/test/: testRescueBot.cpp
JJCAR-Rescuebot/rescue_bot/worlds/: Aidan_World_Square  Aidan_world2  house_world.world  office-test.world  office.world  office_2.world  office_3.world  test_basic_2.world  test_corridor.world  test_for_explore.world
JJCAR-Rescuebot/rescue_bot/worlds/House/: model.sdf
JJCAR-Rescuebot/rescue_bot/worlds/Room/: model.config  model.sdf
JJCAR-Rescuebot/rescue_bot/worlds/faux-office/: model.config  model.sdf
JJCAR-Rescuebot/rescue_bot/worlds/model/office_better/: mesh.sdf  model.config  office_better.blend  office_better.blend1
JJCAR-Rescuebot/rescue_bot/worlds/model/office_better/meshes/: mesh.stl
JJCAR-Rescuebot/rescue_bot/worlds/model/office_mid/: mesh.sdf  model.config
JJCAR-Rescuebot/rescue_bot/worlds/model/office_mid/meshes/: mesh.stl
JJCAR-Rescuebot/rescue_bot/worlds/model/office_wide/: model.config  model.sdf
JJCAR-Rescuebot/rescue_bot/worlds/wall/: model.sdf
